test_apps/test-typechecker/fail/ac/nestedruletypeunknown.app

application test

access control rules

  rule page name()
  {
    true
    rule page dsf()
    {
      true
    }
  }